[issue 131] Added expand and collapse to some options lists areagridreport.php fixes to show ALL areas and not only those that have been executed once. Fixed warnings in fixcharset.php Added metrics to sessionObject Corrected upgrade to use latest version so upgrade works...

--- a/trunk/Sessionweb-Web/js/niceforms/niceforms-default.css
+++ b/trunk/Sessionweb-Web/js/niceforms/niceforms-default.css
@@ -51,20 +51,7 @@ dl {
     clear: both;
 }
 
-dt {
-    float: left;
-    text-align: right;
-    width: 90px;
-    line-height: 25px;
-    margin: 0 10px 10px 0;
-}
 
-dd {
-    float: left;
-    width: 475px;
-    line-height: 25px;
-    margin: 0 0 10px 0;
-}
 
 #footer {
     font-size: 11px;
